New Maven configuration